public/styles/layout.css
/*
 * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 * https://css-tricks.com/international-box-sizing-awareness-day/
 * Do not modify these two selectors, please
 */
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

/*
 * Global layout stuff
 */

body {
  color: #545149;
  background-color: #f4f1ec;
  font-family: "Source Sans 3", sans-serif;
  font-size: 24px;
  height: 100%;
  min-height: 150vh;
}

.logo {
  font-family: "Bungee";
  font-weight: 400;
}

/*
 * Additional CSS can be defined below or in other CSS files, as per instructions
 */

.container {
  width: 90%;
  margin: 0 auto;
  padding: 20px 0;
}

.container textarea {
  width: 100%;
  margin-bottom: 1em;
  background-color: transparent;
  outline: none;
  border: none;
  resize: none;
  border-bottom: 3px solid black;
}

.container .button-counter {
  width: 100%;
  display: flex;
  justify-content: space-between;
  font-family: "Bungee";
  color: red;
}

.container .button-counter button {
  background-color: #4056a1;
  color: white;
}

@media only screen and (min-width: 1024px) {
  .body-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 90%;
    margin: 0 auto;
    padding-top: 10em;
    background-color: transparent;
  }

  #header {
    width: 80%;
  }

  .container {
    margin: 90px;
    margin-top: 0px;
    margin-left: 150px;
    background-color: transparent;
  }
}

